--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
     implementation 'io.rest-assured:rest-assured:4.5.1'
 
+    implementation 'io.appium:java-client:7.6.0'
+
     implementation 'com.google.code.gson:gson:2.8.6'
 }
 
